[gd_scene load_steps=12 format=2]

[ext_resource path="res://screens/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://components/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://screens/Enemies.gd" type="Script" id=3]
[ext_resource path="res://assets/images/rpg_icons_spritesheet.png" type="Texture" id=4]
[ext_resource path="res://screens/Battle.gd" type="Script" id=5]
[ext_resource path="res://screens/SpawnPoint.gd" type="Script" id=6]

[sub_resource type="InputEventAction" id=1]
action = "attack"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 80, 112, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 240, 928, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 1056, 560, 16, 16 )

[node name="Battle" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Enemies" type="YSort" parent="."]
script = ExtResource( 3 )

[node name="Spawn" type="Node2D" parent="Enemies"]
position = Vector2( 17.6559, 52.4405 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Spawn2" type="Node2D" parent="Enemies"]
position = Vector2( 36.8928, 46.6431 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Spawn3" type="Node2D" parent="Enemies"]
position = Vector2( 56.3933, 54.5487 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Spawn4" type="Node2D" parent="Enemies"]
position = Vector2( 75.1032, 47.9607 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 43, 100 )
speed = 500.0

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackButton" type="TextureButton" parent="UI"]
margin_left = 5.0
margin_top = 140.0
margin_right = 22.0
margin_bottom = 157.0
shortcut = SubResource( 2 )
texture_normal = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefendButton" type="TextureButton" parent="UI"]
margin_left = 39.0
margin_top = 140.0
margin_right = 56.0
margin_bottom = 157.0
texture_normal = SubResource( 4 )

[node name="HealButton" type="TextureButton" parent="UI"]
margin_left = 75.0
margin_top = 140.0
margin_right = 92.0
margin_bottom = 157.0
texture_normal = SubResource( 5 )
[connection signal="enemy_selection_changed" from="Enemies" to="." method="_on_enemy_selection_changed"]
[connection signal="pressed" from="UI/AttackButton" to="." method="_on_AttackButton_pressed"]
[connection signal="pressed" from="UI/DefendButton" to="." method="_on_DefendButton_pressed"]
[connection signal="pressed" from="UI/HealButton" to="." method="_on_HealButton_pressed"]
